--- a/yamls/kube-ovn-ipv6.yaml
+++ b/yamls/kube-ovn-ipv6.yaml
@@ -1,3 +1,21 @@
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: ovn-vpc-nat-config
+  namespace: kube-system
+  annotations:
+    kubernetes.io/description: |
+      kube-ovn vpc-nat common config
+data:
+  image: kubeovn/vpc-nat-gateway:v1.12.0
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: ovn-vpc-nat-gw-config
+  namespace: kube-system
+data:
+  enable-vpc-nat-gw: "false"
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -41,7 +59,7 @@ spec:
       hostNetwork: true
       containers:
         - name: kube-ovn-controller
-          image: "kubeovn/kube-ovn:v1.10.0"
+          image: "kubeovn/kube-ovn:v1.12.0"
           imagePullPolicy: IfNotPresent
           args:
             - /kube-ovn/start-controller.sh
@@ -49,18 +67,29 @@ spec:
             - --default-gateway=2001:db8:0000:0000::1
             - --default-gateway-check=true
             - --default-logical-gateway=false
+            - --default-u2o-interconnection=false
             - --default-exclude-ips=
             - --node-switch-cidr=2001:db8:0000:0001::/64
-            - --node-switch-gateway=2001:db8:0000:0001::1
             - --service-cluster-ip-range=fd00:10:96::/112
             - --network-type=geneve
             - --default-interface-name=
+            - --default-exchange-link-name=false
             - --default-vlan-id=100
+            - --ls-dnat-mod-dl-dst=true
             - --pod-nic-type=veth-pair
             - --enable-lb=true
             - --enable-np=true
             - --enable-eip-snat=true
             - --enable-external-vpc=true
+            - --logtostderr=false
+            - --alsologtostderr=true
+            - --gc-interval=360
+            - --inspect-interval=20
+            - --log_file=/var/log/kube-ovn/kube-ovn-controller.log
+            - --log_file_max_size=0
+            - --enable-lb-svc=false
+            - --keep-vm-ip=true
+            - --pod-default-fip-type=
           env:
             - name: ENABLE_SSL
               value: "false"
@@ -80,7 +109,13 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIPs
+            - name: ENABLE_BIND_LOCAL_IP
+              value: "true"
           volumeMounts:
+            - mountPath: /etc/localtime
+              name: localtime
+            - mountPath: /var/log/kube-ovn
+              name: kube-ovn-log
             - mountPath: /var/run/tls
               name: kube-ovn-tls
           readinessProbe:
@@ -97,9 +132,22 @@ spec:
             periodSeconds: 7
             failureThreshold: 5
             timeoutSeconds: 45
+          resources:
+            requests:
+              cpu: 200m
+              memory: 200Mi
+            limits:
+              cpu: 1000m
+              memory: 1Gi
       nodeSelector:
         kubernetes.io/os: "linux"
       volumes:
+        - name: localtime
+          hostPath:
+            path: /etc/localtime
+        - name: kube-ovn-log
+          hostPath:
+            path: /var/log/kube-ovn
         - name: kube-ovn-tls
           secret:
             optional: true
@@ -138,7 +186,7 @@ spec:
       hostPID: true
       initContainers:
         - name: install-cni
-          image: "kubeovn/kube-ovn:v1.10.0"
+          image: "kubeovn/kube-ovn:v1.12.0"
           imagePullPolicy: IfNotPresent
           command: ["/kube-ovn/install-cni.sh"]
           securityContext:
@@ -147,9 +195,11 @@ spec:
           volumeMounts:
             - mountPath: /opt/cni/bin
               name: cni-bin
+            - mountPath: /usr/local/bin
+              name: local-bin
       containers:
         - name: cni-server
-          image: "kubeovn/kube-ovn:v1.10.0"
+          image: "kubeovn/kube-ovn:v1.12.0"
           imagePullPolicy: IfNotPresent
           command:
             - bash
@@ -159,8 +209,14 @@ spec:
             - --encap-checksum=true
             - --service-cluster-ip-range=fd00:10:96::/112
             - --iface=
+            - --dpdk-tunnel-iface=br-phy
             - --network-type=geneve
             - --default-interface-name=
+            - --cni-conf-name=01-kube-ovn.conflist
+            - --logtostderr=false
+            - --alsologtostderr=true
+            - --log_file=/var/log/kube-ovn/kube-ovn-cni.log
+            - --log_file_max_size=0
           securityContext:
             runAsUser: 0
             privileged: true
@@ -175,25 +231,49 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
+            - name: MODULES
+              value: kube_ovn_fastpath.ko
+            - name: RPMS
+              value: openvswitch-kmod
             - name: POD_IPS
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIPs
+            - name: ENABLE_BIND_LOCAL_IP
+              value: "true"
+            - name: DBUS_SYSTEM_BUS_ADDRESS
+              value: "unix:path=/host/var/run/dbus/system_bus_socket"
           volumeMounts:
             - name: host-modules
               mountPath: /lib/modules
               readOnly: true
+            - name: shared-dir
+              mountPath: /var/lib/kubelet/pods
             - mountPath: /etc/openvswitch
               name: systemid
             - mountPath: /etc/cni/net.d
               name: cni-conf
             - mountPath: /run/openvswitch
               name: host-run-ovs
+              mountPropagation: HostToContainer
             - mountPath: /run/ovn
               name: host-run-ovn
+            - mountPath: /host/var/run/dbus
+              name: host-dbus
+              mountPropagation: HostToContainer
             - mountPath: /var/run/netns
               name: host-ns
               mountPropagation: HostToContainer
+            - mountPath: /var/log/kube-ovn
+              name: kube-ovn-log
+            - mountPath: /var/log/openvswitch
+              name: host-log-ovs
+            - mountPath: /var/log/ovn
+              name: host-log-ovn
+            - mountPath: /etc/localtime
+              name: localtime
+            - mountPath: /tmp
+              name: tmp
           livenessProbe:
             failureThreshold: 3
             initialDelaySeconds: 30
@@ -204,18 +284,27 @@ spec:
             timeoutSeconds: 3
           readinessProbe:
             failureThreshold: 3
-            initialDelaySeconds: 30
             periodSeconds: 7
             successThreshold: 1
             tcpSocket:
               port: 10665
             timeoutSeconds: 3
+          resources:
+            requests:
+              cpu: 100m
+              memory: 100Mi
+            limits:
+              cpu: 1000m
+              memory: 1Gi
       nodeSelector:
         kubernetes.io/os: "linux"
       volumes:
         - name: host-modules
           hostPath:
             path: /lib/modules
+        - name: shared-dir
+          hostPath:
+            path: /var/lib/kubelet/pods
         - name: systemid
           hostPath:
             path: /etc/origin/openvswitch
@@ -234,6 +323,27 @@ spec:
         - name: host-ns
           hostPath:
             path: /var/run/netns
+        - name: host-dbus
+          hostPath:
+            path: /var/run/dbus
+        - name: host-log-ovs
+          hostPath:
+            path: /var/log/openvswitch
+        - name: kube-ovn-log
+          hostPath:
+            path: /var/log/kube-ovn
+        - name: host-log-ovn
+          hostPath:
+            path: /var/log/ovn
+        - name: localtime
+          hostPath:
+            path: /etc/localtime
+        - name: tmp
+          hostPath:
+            path: /tmp
+        - name: local-bin
+          hostPath:
+            path: /usr/local/bin
 
 ---
 kind: DaemonSet
@@ -262,11 +372,16 @@ spec:
       hostPID: true
       containers:
         - name: pinger
-          image: "kubeovn/kube-ovn:v1.10.0"
+          image: "kubeovn/kube-ovn:v1.12.0"
           command:
             - /kube-ovn/kube-ovn-pinger
+          args:
             - --external-address=2400:3200::1
             - --external-dns=alauda.cn
+            - --logtostderr=false
+            - --alsologtostderr=true
+            - --log_file=/var/log/kube-ovn/kube-ovn-pinger.log
+            - --log_file_max_size=0
           imagePullPolicy: IfNotPresent
           securityContext:
             runAsUser: 0
@@ -309,12 +424,16 @@ spec:
               name: host-log-ovs
             - mountPath: /var/log/ovn
               name: host-log-ovn
+            - mountPath: /var/log/kube-ovn
+              name: kube-ovn-log
+            - mountPath: /etc/localtime
+              name: localtime
             - mountPath: /var/run/tls
               name: kube-ovn-tls
           resources:
             requests:
               cpu: 100m
-              memory: 300Mi
+              memory: 100Mi
             limits:
               cpu: 200m
               memory: 400Mi
@@ -339,9 +458,15 @@ spec:
         - name: host-log-ovs
           hostPath:
             path: /var/log/openvswitch
+        - name: kube-ovn-log
+          hostPath:
+            path: /var/log/kube-ovn
         - name: host-log-ovn
           hostPath:
             path: /var/log/ovn
+        - name: localtime
+          hostPath:
+            path: /etc/localtime
         - name: kube-ovn-tls
           secret:
             optional: true
@@ -389,7 +514,7 @@ spec:
       hostNetwork: true
       containers:
         - name: kube-ovn-monitor
-          image: "kubeovn/kube-ovn:v1.10.0"
+          image: "kubeovn/kube-ovn:v1.12.0"
           imagePullPolicy: IfNotPresent
           command: ["/kube-ovn/start-ovn-monitor.sh"]
           args:
@@ -411,6 +536,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIPs
+            - name: ENABLE_BIND_LOCAL_IP
+              value: "true"
           resources:
             requests:
               cpu: 200m
