--- a/charts/templates/kube-ovn-crd.yaml
+++ b/charts/templates/kube-ovn-crd.yaml
@@ -176,6 +176,10 @@ spec:
                   type: string
                 subnet:
                   type: string
+                externalSubnets:
+                  items:
+                    type: string
+                  type: array
                 vpc:
                   type: string
                 selector:
@@ -557,6 +561,8 @@ spec:
                 natGwDp:
                   type: string
                 qosPolicy:
+                  type: string
+                externalSubnet:
                   type: string
 ---
 apiVersion: apiextensions.k8s.io/v1
