--- a/yamls/kube-ovn-ipv6.yaml
+++ b/yamls/kube-ovn-ipv6.yaml
@@ -90,6 +90,7 @@ spec:
             - --enable-lb-svc=false
             - --keep-vm-ip=true
             - --pod-default-fip-type=
+            - --node-local-dns-cache-ip=
           env:
             - name: ENABLE_SSL
               value: "false"
