Using full repo name to avoid short-name error in podman

--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 global:
   registry:
-    address: kubeovn
+    address: docker.io/kubeovn
     imagePullSecrets: []
   images:
     kubeovn:
